--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ipushpull-vue-multiselect",
-  "version": "2.1.10",
+  "version": "2.1.11",
   "private": false,
   "types": "index.d.ts",
   "scripts": {
@@ -114,6 +114,7 @@
   "files": [
     "dist",
     "src",
-    "index.d.ts"
+    "index.d.ts",
+    "postcss.config.js"
   ]
 }
